# db2-dbt

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  RELEASE_GUIDE.md  cleanup.sh  dbt_project.yml  debug_adapter.py  debug_dbt.py  dev-requirements.txt  notices.txt  pyproject.toml  recompile_try.sh  requirements.txt  scan_excludes.txt  setup.py  test.env.example  tox.ini
.github/workflows/: build_release.yaml  scans.yml  unit-tests.yml
dbt/: __init__.py
dbt/adapters/: __init__.py
dbt/adapters/db2/: __init__.py  __version__.py  column.py  connections.py  et_options_parser.py  impl.py  relation.py
dbt/include/: __init__.py
dbt/include/db2/: __init__.py  dbt_project.yml  profile_template.yml  profiles.yml.example
dbt/include/db2/macros/: adapters.sql  catalog.sql  compile.sql  get_query_results_as_dict.sql  grants.sql  ref.sql  render_sql.sql  schema.sql
dbt/include/db2/macros/materializations/: incremental.sql  incremental_strategies.sql  merge.sql  seed.sql  snapshot.sql  table.sql  view.sql
dbt/include/db2/macros/utils/: array_append.sql  array_concat.sql  array_construct.sql  bool_or.sql  cast_bool_to_text.sql  concat.sql  current_timestamp.sql  dateadd.sql  datediff.sql  hash.sql  lastday.sql  length.sql  listagg.sql  position.sql  right.sql  split_part.sql  timestamps.sql
dbt_test_project/: dbt_project.yml
dbt_test_project/models/: example_model.sql
dbtdb2sampleproject/: dbt_project.yml  requirements.txt
dbtdb2sampleproject/macros/: list_tables.sql
dbtdb2sampleproject/models/: docs.md  finalcustomers.sql  finalorders.sql  orders_incremental.sql  schema.yml
dbtdb2sampleproject/models/staging/: source.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
tests/: __init__.py  conftest.py  dbt_schema_fixture.py
tests/functional/: __init__.py  conftest.py  dbt_runner.py  utils.py
tests/functional/basic/: test_basic.py  test_invalid_reference.py  test_mixed_case_db.py  test_project.py  test_varchar_widening.py
tests/functional/compile/: fixtures.py  test_compile.py
tests/functional/dbt_debug/: test_dbt_debug.py
tests/functional/exit_codes/: fixtures.py  test_exit_codes.py
tests/functional/exposures/: fixtures.py  test_exposure_configs.py  test_exposures.py
tests/functional/invalid_model_tests/: test_invalid_models.py  test_model_warning.py
tests/functional/macros/: fixtures.py  test_macros.py
tests/functional/projects/: __init__.py  utils.py
tests/functional/projects/dbt_integration/: __init__.py
tests/functional/projects/graph_selection/: __init__.py
tests/functional/projects/jaffle_shop/: __init__.py
tests/functional/retry/: fixtures.py  test_retry.py
tests/functional/unit_testing/: fixtures.py  test_csv_fixtures.py  test_state.py  test_unit_testing.py  test_ut_dependency.py  test_ut_sources.py
tests/unit/: test_adapter.py  test_adapter_conversions.py  test_connection.py  test_filter_catalog.py  test_materialized_view.py  test_renamed_relations.py  utils.py
(+2 files in other folders)
