[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibm-dbt-db2"
version = "1.0.0.dev1"
description = "The IBM Db2 adapter plugin for dbt"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "Shubham Kapoor", email = "shubham.kapoor992@gmail.com"}
]
maintainers = [
    {name = "Amit Parmar", email = "amit25parmars@gmail.com"}
]
keywords = ["dbt", "db2", "ibm", "adapter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "dbt-core~=1.11.0",
    "ibm_db==3.2.8"
]

[project.urls]
Homepage = "https://github.com/IBM/db2-dbt"
Repository = "https://github.com/IBM/db2-dbt"
Issues = "https://github.com/IBM/db2-dbt/issues"

[project.entry-points."dbt.adapters"]
db2 = "dbt.adapters.db2.impl:Db2Adapter"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dbt*"]
namespaces = true

[tool.setuptools.package-data]
"dbt.include.db2" = ["*.sql", "*.yml", "*.md"]
"dbt.include.db2.macros" = ["*.sql"]
"dbt.include.db2.macros.materializations" = ["*.sql"]
"dbt.include.db2.macros.utils" = ["*.sql"]

[tool.setuptools.dynamic]
# If you want to read version from __version__.py dynamically in the future
# version = {attr = "dbt.adapters.db2.__version__.version"}

# Black configuration
[tool.black]
line-length = 99
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests/functional"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore:.*'soft_unicode' has been renamed to 'soft_str'*:DeprecationWarning",
    "ignore:unclosed file .*:ResourceWarning",
]
env_files = ["test.env"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
namespace_packages = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Flake8 configuration (note: flake8 doesn't read from pyproject.toml natively)
# Keep .flake8 file for flake8 configuration

# Coverage configuration
[tool.coverage.run]
source = ["dbt"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]